[package]
name = "scheme-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"

[dev-dependencies]
manifest-dir-macros = "0.1.16"
pretty_assertions = "1.2.1"

[features]
override-test = []
