[package]
name = "scheme-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
derive_more = "0.99.17"
frunk = "0.4.0"
num = "0.4.0"

[dev-dependencies]
backtrace = "0.3.66"
manifest-dir-macros = "0.1.16"
pretty_assertions = "1.2.1"
walkdir = "2.3.2"

[features]
override-test = []

[workspace]
members = [ "scheme-parser-bin" ]
